# LinkOS

./: .gitignore  LICENSE  README.md  package.json
apps/desktop/: .env.example  electron.vite.config.ts  forge.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
apps/desktop-dotnet/: README.md
apps/desktop/src/: env.d.ts
apps/desktop/src/common/: types.ts
apps/desktop/src/main/: config.ts  index.ts  logger.ts
apps/desktop/src/main/adapters/db/: LanceDBAdapter.old.ts  LanceDBadapter.ts
apps/desktop/src/main/core/ports/: ILLMProvider.ts  IMemoryStore.ts  IRepository.ts  IVectorDB.ts
apps/desktop/src/main/core/types/: memory.type.ts  message.type.ts
apps/desktop/src/main/infrastructure/: config.ts
apps/desktop/src/main/llm/: chat.ts  lancedb-adapter.ts  rqg.ts  search.ts
apps/desktop/src/main/modules/llm/: chat.ts  rqg.ts  search.ts
apps/desktop/src/main/modules/memory/: MemoryService.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html  renderer.d.ts
apps/desktop/src/renderer/src/: App.tsx  index.css  main.tsx
apps/desktop/src/renderer/src/assets/css/: main.css
apps/desktop/src/renderer/src/components/ChatWindow/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  RagDocumentViewer.tsx  index.tsx
apps/desktop/src/renderer/src/lib/utils/: cn.ts
apps/desktop/src/renderer/src/store/: useChatWindowStore.ts
apps/desktop/storage/: vector_store.json
runtimes/python/: pyproject.toml
runtimes/python/src/: main.py
(+1 files in other folders)
