[project]
name = "linkos-runtime"
version = "0.1.0"
description = "Python AI Runtime for LinkOS"
requires-python = ">=3.12"
dependencies = [
    "department-of-labor-auto-ui>=0.0.1",
    "funasr>=1.0.0",
    "modelscope>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.0.0"
]
